# mergingplugin

./: ChangeLog  Makefile.am  NEWS  aclocal.m4  configure.ac  documentation.dox  libtool  merging.cfg
doc/: Bibliography.bib  UserGuide-mergingplugin.tex
examples/: AvgOp1.txt  Makefile.am  OrderBinaryDecisionTreeOp1.txt  OrderBinaryDecisionTreeOp2.txt  OrderBinaryDecisionTreeOp3.txt  TNMClassification.txt  abnormal1.hyp  abnormal2.hyp  abnormal3.hyp  accessarguments1.hex  accessarguments2.hex  accessarguments3.hex  accesstuples1.hex  accesstuples2.hex  accesstuples3.hex  calledprog.hex.in  callhex1.hex  callhexfile1.hex  callhexfile1.hex.in  compare.sh  dalal1.mp  dalal2.mp  dalal3.mp  dalal4.mp  dalal5.mp  dalal6.mp  dalal7.mp  dbo1.mp  dbo2.mp  dbo3.mp  dbo4.mp  dbo5.mp  dbo6.mp  dbo7.mp  diagnosis1.mp  diagnosis1.mp.in  diagnosis2.mp  diagnosis2.mp.in  diagnosis3-dbo.mp  diagnosis3-dbo.mp.in  (+43 more)
examples/testoperators/: Makefile.am
examples/testoperators/src/: Makefile.am  TestOperators.cpp
examples/tests/: accessarguments1.out  accessarguments2.out  accessarguments3.as  accesstuples1.out  accesstuples2.out  aspplugintests.test  builtinoperators.test  callhex1.as  callhexfile1.as  dalal1.as  dalal3.as  dalal4.as  dalal7.as  diagnosis1.as  diagnosis2.as  diagnosis3-dbo.as  judgement1.as  judgement2.as  mergingplugintests.test  minhamming5.as  multipleanswersets.as  negatedatom.as  nestedhexprograms.test  operators1.as  operators2.out  relationmerging1.as  relationmerging2.as  run-dlvhex-tests.sh  run-mergingplugin-tests.sh  runhexfile.out  runhexnested.as  setminus1.as  transitive.as  union2.as
include/: ArbProcess.h  AvgOp.h  DLVHexProcess.h  DecisionDiagram.h  DlvhexSolver.h  HexAnswerCache.h  HexExecution.h  IOperator.h  InternalTypes.h  MajorityVotingOp.h  Makefile  Makefile.am  Makefile.in  OpDBO.h  OpDalal.h  OpMajoritySelection.h  OpMinHamming.h  OpRelationMerging.h  OpSetminus.h  OpUnion.h  Operators.h  OrderBinaryDecisionTreeOp.h  PublicTypes.h  ToBinaryDecisionTreeOp.h  UnfoldOp.h  UnionOp.h  UserPreferencesOp.h
mpcompiler/: AUTHORS  ChangeLog  NEWS  configure.ac
mpcompiler/examples/: Makefile.am  commonsignature.mp  commonsignature.rp  externalsource1.mp  externalsource2.mp  invalidbeliefbase1.mp  invalidbeliefbase1.rp  invalidbeliefbase2.mp  invalidbeliefbase2.rp  invalidcs1.mp  invalidcs2.mp  invalidrp1.mp  invalidrp1.rp  multipleanswersets1.mp  multipleanswersets2.mp  multipleanswersets2.rp  negation1.mp  negation1.rp  negation2.mp  negation2.rp  negation3.mp  singleanswerset1.mp  singleanswerset2.mp  subrp1.mp  subrp1.rp  subrp2.mp
mpcompiler/examples/tests/: externalsource1.as  mpcompilertests.test  negation1.as  negation3.as  rpcompilertests.test  run-mpc-tests.sh  subrp1.as  subrp2.as
mpcompiler/include/: BisonParser.h  CodeGenerator.h  IParser.h  Makefile.am  ParseTreeNode.h  ParseTreeNodeIterator.h  SpiritParser.h
mpcompiler/src/: BisonScanner.l++  CodeGenerator.cpp  CompilerMain.cpp  IParser.cpp  Makefile.am  ParseTreeNode.cpp  ParseTreeNodeIterator.cpp  SpiritParser.cpp
rpcompiler/: Makefile.am  bootstrap.sh  configure.ac
rpcompiler/examples/: Makefile.am  externalsource1.hex  externalsource1.rp  externalsource2.hex  invalidcs1.rp  invalidcs2.txt  invalidrp2.txt  revisionplan2.txt  singleanswerset1.rp  singleanswerset2.rp  subrp1.rp  subrp2.rp  subrp2.txt
rpcompiler/examples/tests/: asptest.hex  emptyrevisionplan.out  h1.hex  invalidcs1.out  multipleanswersets1.out  multipleanswersets2.out  out.hex  rpcompilertests.test  run-rpc-tests.sh  singleanswerset1.out
rpcompiler/include/: BisonParser.h  CodeGenerator.h  IParser.h  ParseTreeNode.h  ParseTreeNodeIterator.h  Parser.h  RPParser.h  SpiritParser.h
rpcompiler/src/: BisonParserImpl.ypp  BisonScanner.l++  CodeGenerator.cpp  CompilerMain.cpp  IParser.cpp  Makefile.am  ParseTreeNode.cpp  ParseTreeNodeIterator.cpp  RPParser.cpp  SpiritParser.cpp  parser.ypp  parsertest.hex  parsertest.txt  scanner.l++  spirittest.txt  test.txt
src/: ASPPlugin.cpp  AvgOp.cpp  DLVHexProcess.cpp  DecisionDiagram.cpp  DlvhexSolver.cpp  HexAnswerCache.cpp  HexExecution.cpp  IOperator.cpp  InternalTypes.cpp  MajorityVotingOp.cpp  Makefile.am  MergingPlugin.cpp  OpDBO.cpp  OpDalal.cpp  OpMajoritySelection.cpp  OpMinHamming.cpp  OpRelationMerging.cpp  OpSetminus.cpp  OpUnion.cpp  Operators.cpp  OrderBinaryDecisionTreeOp.cpp  ToBinaryDecisionTreeOp.cpp  UnfoldOp.cpp  UnionOp.cpp  UserPreferencesOp.cpp  config.h
