noinst_HEADERS = DLVHexProcess.h \
		 ArbProcess.h \
		 HexExecution.h \
		 Operators.h \
		 HexExecution.h \
		 Operators.h \
		 HexAnswerCache.h \
		 OpUnion.h \
		 OpSetminus.h \
		 OpDalal.h \
		 OpMajoritySelection.h \
		 OpRelationMerging.h

pkginclude_HEADERS = \
	PublicTypes.h \
	IOperator.h
