noinst_HEADERS = HexExecution.h \
		 HexExecution.h \
		 HexAnswerCache.h \
		 Operators.h \
		 OpUnion.h \
		 OpSetminus.h

#DLVHexProcess.h \
#DlvhexSolver.h \
#ArbProcess.h \
#Operators.h \
#OpDalal.h \
#OpDBO.h \
#OpMajoritySelection.h \
#OpRelationMerging.h

pkginclude_HEADERS = \
	PublicTypes.h \
	IOperator.h
