EXTRA_DIST = \
  emptyrevisionplan.rp \
  singleanswerset1.rp \
  singleanswerset2.rp \
  multipleanswersets1.rp \
  multipleanswersets2.rp \
  commonsignature.rp \
  invalidcs1.rp \
  invalidcs2.rp \
  invalidbeliefbase1.rp \
  invalidbeliefbase2.rp \
  invalidrp1.rp \
  invalidrp2.rp \
  subrp1.rp \
  subrp2.rp \
  negation1.rp \
  negation2.rp \
  externalsource1.rp


TESTS = tests/run-rpc-tests.sh
TESTS_ENVIRONMENT = DLVHEX=dlvhex RPCOMPILER=$(top_srcdir)/rpcompiler/src/rpcompiler CMPSCRIPT=$(top_srcdir)/examples/compare.sh TESTDIR=$(top_srcdir)/rpcompiler/examples/tests RPCPARAMETERS="" DLVHEXPARAMETERS="--plugindir=$(top_builddir)/src"
