EXTRA_DIST = \
  emptyrevisionplan.mp \
  singleanswerset1.mp \
  singleanswerset2.mp \
  multipleanswersets1.mp \
  multipleanswersets2.mp \
  commonsignature.mp \
  invalidcs1.mp \
  invalidcs2.mp \
  invalidbeliefbase1.mp \
  invalidbeliefbase2.mp \
  invalidrp1.mp \
  invalidrp2.mp \
  subrp1.mp \
  subrp2.mp \
  negation1.mp \
  negation2.mp \
  externalsource1.mp


TESTS = tests/run-mpc-tests.sh
TESTS_ENVIRONMENT = DLVHEX=dlvhex MPCOMPILER=$(top_srcdir)/mpcompiler/src/mpcompiler CMPSCRIPT=$(top_srcdir)/examples/compare.sh TESTDIR=$(top_srcdir)/mpcompiler/examples/tests RPCPARAMETERS="" DLVHEXPARAMETERS="--plugindir=$(top_builddir)/src"
