EXTRA_DIST = \
  revisionplan1.txt

TESTS = tests/run-rpc-tests.sh
TESTS_ENVIRONMENT = DLVHEX=dlvhex RPCOMPILER=$(top_srcdir)/rpcompiler/src/rpcompiler CMPSCRIPT=$(top_srcdir)/examples/compare.sh TESTDIR=$(top_srcdir)/rpcompiler/examples/tests RPCPARAMETERS="" DLVHEXPARAMETERS="--plugindir=$(top_builddir)/src"
